# tabby-eq

./: .clang-format  .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-07-02T11-20-03-978Z.yml  page-2026-07-02T11-22-00-890Z.yml
cmake/: GenerateTabbyVersion.cmake  TestVersionEscape.cmake
docs/: CONCEPT.md  CUTS.md  DYNAMICS.md  LANES.md  MS-DUAL-MODE.md  ROADMAP.md  VOCABULARY-PILOT.md  VOCABULARY.md
docs/migration/: repoint-to-felitronics-core.md
src/: AppPreferences.h  LinearPhase.h  NaturalPhase.h  Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  UpdateChecker.cpp  UpdateChecker.h  UpdateCompare.h  Vocab.h
src/chrome/: BrandBlister.h  ChromeBar.h  ChromeMetrics.h  ChromeUnderline.h  CompareCell.h  PresetCell.h
src/eqview/: HandleMath.h  PlotMap.h  SpectrumPane.h  TraceSet.h
src/ui/: BandEditStrip.cpp  BandEditStrip.h  BrandMark.h  ChromeButtons.h  CorrelationMeter.h  EqCurveDisplay.cpp  EqCurveDisplay.h  FilterShapes.h  HeaderBrand.h  LaneGlyphs.h  LaneMenu.h  LevelMeter.h  Palette.h  SnapshotButton.h  TabbyMark.h  VersionInfo.cpp  VersionInfo.h
teq/: CMakeLists.txt  README.md
teq/include/teq/: EqBand.h  EqEngine.h  EqTypes.h  MatchedBiquad.h  Math.h  Smoother.h  SpectrumTap.h  Svf.h
teq/tests/: EqEngineTests.cpp  MatchedBiquadTests.cpp  TestMain.cpp  TestUtil.h
tests/: adapter_schema.cpp  compare_history_adapter.cpp  eqview_refute.cpp  handle_math.cpp  lifecycle_misuse.cpp  plot_map.cpp  spectrum_pane.cpp  trace_set.cpp  update_compare.cpp  version_header.cpp
vocab/: tabby-vocab.draft.yaml
